# HD-BET

./: .gitignore  .pre-commit-config.yaml  codespell_ignore_words.txt  noxfile.py  pyproject.toml  readme.md  requirements.txt  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
HD_BET/: __init__.py  checkpoint_download.py  config.py  data_loading.py  entry_point.py  hd-bet  hd-bet.cmd  hd-bet.py  hd_bet_cli.py  hd_bet_prediction.py  network_architecture.py  paths.py  predict_case.py  run.py  utils.py
HD_BETv2/: checkpoint_download.py  entry_point.py  hd_bet_prediction.py  paths.py
docs/: conf.py  index.md
tests/: test_package.py
