[project]
name = "HD_BETv2"
version = "2.0"
description = "Tool for brain extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Fabian Isensee", email = "f.isensee@dkfz.de"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix"
]
urls = { "Homepage" = "https://github.com/MIC-DKFZ/hd-bet" }

dependencies = [
    "numpy",
    "torch>=0.4.1",
    "scikit-image",
    "SimpleITK",
    "nnunetv2>=2.5.1"
]

[project.scripts]
"hd_bet_v2" = "HD_BETv2.entry_point:main"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
